# tamarind-cli

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md
src/tamarind/: __init__.py  catalog.py  config.py  errors.py  http.py  jobs.py  rest.py
src/tamarind/cli/: __init__.py  inputs.py  main.py  output.py
src/tamarind/cli/commands/: auth.py  catalog.py  files.py  jobs.py
tests/: test_cli_commands.py  test_config.py  test_file_filters.py  test_inputs.py  test_jobs.py  test_output.py  test_rest.py
