[project]
name = "tamarind-cli"
version = "0.1.0"
description = "Command-line interface for the Tamarind Bio platform — submit, monitor, and download protein/molecule jobs from your terminal or an AI agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tamarind Bio" }]
keywords = ["bioinformatics", "protein", "alphafold", "boltz", "cli", "agents"]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://tamarind.bio"
Documentation = "https://app.tamarind.bio/api-docs"
Source = "https://github.com/Tamarind-Bio/tamarind-cli"

[project.scripts]
tamarind = "tamarind.cli.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tamarind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
